# tauri-plugin-hid

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  typedoc.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  HidPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/plugin-hid-example/: package.json
examples/plugin-hid-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/plugin-hid-example/src-tauri/capabilities/: default.json
examples/plugin-hid-example/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-plugin-hid-example/: package.json
examples/tauri-plugin-hid-example/src/: main.ts
examples/tauri-plugin-hid-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-plugin-hid-example/src-tauri/src/: main.rs
examples/tauri-plugin-hid-vue-example/: package.json
examples/tauri-plugin-hid-vue-example/src/: App.vue
examples/tauri-plugin-hid-vue-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-plugin-hid-vue-example/src-tauri/capabilities/: default.json
examples/tauri-plugin-hid-vue-example/src-tauri/src/: lib.rs  main.rs
examples/tauri-plugin-hid-vue-example/src/components/: HidDeviceConnected.vue  HidDeviceInfo.vue
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: device_list.toml  enumerate.toml  get_input_report.toml  send_output_report.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
