[package]
name = "tauri-plugin-hid"
version = "0.1.4"
authors = [ "Joseph Birks" ]
description = "A Tauri plugin to provide access to USB HID devices"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-hid"
repository = "https://github.com/RedfernElec/tauri-plugin-hid"
readme = "README.md"
homepage = "https://github.com/RedfernElec/tauri-plugin-hid"

[dependencies]
tauri = { version = "2.4.0" }
serde = "1.0"
thiserror = "2"
hidapi-rusb = "1.3.3"
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
tauri-plugin = { version = "2.1.0", features = ["build"] }
