[package]
name = "tauri-plugin-hid"
version = "0.2.0"
authors = [ "Joseph Birks" ]
description = "A Tauri plugin to provide access to USB HID devices"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-hid"
repository = "https://github.com/RedfernElec/tauri-plugin-hid"
readme = "README.md"
homepage = "https://github.com/RedfernElec/tauri-plugin-hid"

[dependencies]
tauri = { version = "2.4.0" }
serde = "1.0"
thiserror = "2"
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
hidapi = "2.6.3"

[build-dependencies]
tauri-plugin = { version = "2.1.0", features = ["build"] }
